# experiments-phd

./: .gitignore  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
src/: main_experiment_1.py  main_experiment_3.py  main_experiment_4.py  main_experiment_5.py
src/analysis/: statistical_analysis_experiment_1.html  statistical_analysis_experiment_1.ipynb  statistical_analysis_experiment_2.ipynb  statistical_analysis_experiment_2_completo.ipynb  statistical_analysis_experiment_3.ipynb  statistical_analysis_experiment_3_novos_perfis.ipynb  statistical_analysis_experiment_3_taxonomia_factual_direta copy.ipynb  statistical_analysis_experiment_3_taxonomia_factual_direta.ipynb  statistical_analysis_experiment_3_taxonomia_narrativa_descritiva copy.ipynb  statistical_analysis_experiment_3_taxonomia_narrativa_descritiva.ipynb  statistical_analysis_experiment_3_v2.ipynb  statistical_analysis_experiment_4.ipynb  statistical_analysis_experiment_5.ipynb  statistical_analysis_experiment_5_complete.ipynb
src/config/: settings.py
src/data/: questions_and_answers.json  questions_and_answers_experiment_1.json  questions_and_answers_experiment_1_6_profiles.json  questions_and_answers_experiment_2.json  questions_and_answers_experiment_2_v2.json  questions_and_answers_experiment_4.json  questions_and_answers_icl_tecnico.json  questions_and_answers_icl_torcedor.json  questions_and_answers_jornalista.json  questions_and_answers_narrador.json  questions_and_answers_tecnico.json  questions_and_answers_torcedor.json
src/evaluations/: criteria.py  evaluator.py  evaluator_experiment_1.py  (+2 more)
(+56 files in other folders)
