[project]
name = "react"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis Gustavo Coutinho do Rego", email = "gustavo.coutinho@insightlab.ufc.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.24,<0.4.0)",
    "langgraph (>=0.3.31,<0.4.0)",
    "openai (>=1.75.0,<2.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "grandalf (>=0.8,<0.9)",
    "pyprojroot (>=0.3.0,<0.4.0)",
    "langchain-community (>=0.3.22,<0.4.0)",
    "deepeval (>=2.8.9,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "rouge (>=1.0.1,<2.0.0)",
    "textdistance (>=4.6.3,<5.0.0)",
    "pandoc (>=2.4,<3.0)",
    "texenv (>=0.0.10,<0.0.11)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "react", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
